--- a/public/index.html
+++ b/public/index.html
@@ -12,39 +12,7 @@
         <h3 class="chatroom-header-title">一對一聊天</h3>
         <span class="chatroom-header-close">Close</span>
       </div>
-      <div class="chatroom-body">
-        <!-- <div class="chatroom-dialog user">
-          <div class="chatroom-dialog-plaintext">您好，我正考慮購買一輛新車。您能給我一些建議嗎？</div>
-          <time>2023/10/28 08:39</time>
-        </div>
-        <div class="chatroom-dialog assistant">
-          <div class="chatroom-dialog-plaintext">請問您對於車輛類型、品牌或預算有任何特別的要求嗎？</div>
-          <time>2023/10/28 08:39</time>
-        </div>
-        <div class="chatroom-dialog user">
-          <div class="chatroom-dialog-media">
-            <img src="assets/gallery-1.jpg" alt="" />
-            <img src="assets/gallery-2.jpg" alt="" />
-            <img src="assets/gallery-3.jpg" alt="" />
-          </div>
-          <time>2023/10/28 08:39</time>
-        </div>
-        <div class="chatroom-dialog user">
-          <div class="chatroom-dialog-media">
-            <video controls>
-              <source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4" />
-            </video>
-          </div>
-          <time>2023/10/28 08:39</time>
-        </div>
-        <div class="chatroom-dialog user">
-          <div class="chatroom-dialog-media">
-            <img src="assets/gallery-1.jpg" alt="" />
-            <img src="assets/gallery-2.jpg" alt="" />
-          </div>
-          <time>2023/10/28 08:39</time>
-        </div> -->
-      </div>
+      <div class="chatroom-body"></div>
       <div class="chatroom-footer">
         <label class="chatroom-footer-label">
           <input type="file" name="" id="fileUploader" accept="image/*,video/*" multiple />
