--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       <div class="chatroom-body"></div>
       <div class="chatroom-footer">
         <label class="chatroom-footer-label">
-          <input type="file" name="" id="fileUploader" accept="image/*,video/*" multiple />
+          <input type="file" name="" accept="image/*,video/*" multiple />
         </label>
         <input type="text" class="chatroom-footer-msgInput" placeholder="請輸入訊息" />
       </div>
